--- a/SpriteEditor/spriteview.ui
+++ b/SpriteEditor/spriteview.ui
@@ -10,6 +10,9 @@
     <height>809</height>
    </rect>
   </property>
+  <property name="mouseTracking">
+   <bool>true</bool>
+  </property>
   <property name="windowTitle">
    <string>SpriteView</string>
   </property>
@@ -22,6 +25,9 @@
       <width>700</width>
       <height>700</height>
      </rect>
+    </property>
+    <property name="mouseTracking">
+     <bool>true</bool>
     </property>
     <property name="text">
      <string/>
@@ -82,6 +88,22 @@
       <width>58</width>
       <height>58</height>
      </size>
+    </property>
+   </widget>
+   <widget class="QLabel" name="coordinates">
+    <property name="geometry">
+     <rect>
+      <x>910</x>
+      <y>690</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(170, 255, 127);</string>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
