--- a/SpriteEditor/spriteview.ui
+++ b/SpriteEditor/spriteview.ui
@@ -110,13 +110,13 @@
     <property name="geometry">
      <rect>
       <x>870</x>
-      <y>250</y>
+      <y>270</y>
       <width>181</width>
       <height>25</height>
      </rect>
     </property>
     <property name="maximum">
-     <number>20</number>
+     <number>30</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -126,7 +126,7 @@
     <property name="geometry">
      <rect>
       <x>920</x>
-      <y>650</y>
+      <y>660</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -139,7 +139,7 @@
     <property name="geometry">
      <rect>
       <x>920</x>
-      <y>690</y>
+      <y>700</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -148,12 +148,12 @@
      <string>Delete Frame</string>
     </property>
    </widget>
-   <widget class="QLabel" name="FPSLabel">
+   <widget class="QLabel" name="fpsLabel">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>250</y>
-      <width>31</width>
+      <x>820</x>
+      <y>270</y>
+      <width>51</width>
       <height>20</height>
      </rect>
     </property>
@@ -165,7 +165,7 @@
     <property name="geometry">
      <rect>
       <x>870</x>
-      <y>280</y>
+      <y>300</y>
       <width>171</width>
       <height>351</height>
      </rect>
@@ -287,7 +287,7 @@
      <x>0</x>
      <y>0</y>
      <width>1100</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
