--- a/SpriteEditor/Images.qrc
+++ b/SpriteEditor/Images.qrc
@@ -9,5 +9,7 @@
         <file>save.png</file>
         <file>load.png</file>
         <file>newFile.png</file>
+        <file>redo.png</file>
+        <file>undo.png</file>
     </qresource>
 </RCC>
