--- a/SpriteEditor/spriteview.ui
+++ b/SpriteEditor/spriteview.ui
@@ -10,6 +10,11 @@
     <height>800</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <bold>true</bold>
+   </font>
+  </property>
   <property name="mouseTracking">
    <bool>false</bool>
   </property>
@@ -93,8 +98,8 @@
    <widget class="QLabel" name="coordinates">
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>660</y>
+      <x>180</x>
+      <y>620</y>
       <width>51</width>
       <height>21</height>
      </rect>
@@ -109,10 +114,10 @@
    <widget class="QSlider" name="fpsSlider">
     <property name="geometry">
      <rect>
-      <x>870</x>
-      <y>270</y>
-      <width>181</width>
-      <height>25</height>
+      <x>840</x>
+      <y>220</y>
+      <width>161</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="minimum">
@@ -128,11 +133,19 @@
    <widget class="QPushButton" name="addFrame">
     <property name="geometry">
      <rect>
-      <x>920</x>
-      <y>660</y>
-      <width>101</width>
-      <height>41</height>
+      <x>800</x>
+      <y>610</y>
+      <width>111</width>
+      <height>71</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">selection-color: rgb(254, 255, 206);</string>
     </property>
     <property name="text">
      <string>Add Frame</string>
@@ -141,10 +154,10 @@
    <widget class="QPushButton" name="deleteFrame">
     <property name="geometry">
      <rect>
-      <x>920</x>
-      <y>700</y>
+      <x>910</x>
+      <y>610</y>
       <width>101</width>
-      <height>41</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
@@ -154,11 +167,18 @@
    <widget class="QLabel" name="fpsLabel">
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>270</y>
-      <width>51</width>
-      <height>20</height>
+      <x>800</x>
+      <y>200</y>
+      <width>81</width>
+      <height>61</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Dubai</family>
+      <pointsize>9</pointsize>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string>0 FPS</string>
@@ -167,10 +187,10 @@
    <widget class="QListWidget" name="listWidget">
     <property name="geometry">
      <rect>
-      <x>870</x>
-      <y>300</y>
-      <width>171</width>
-      <height>351</height>
+      <x>800</x>
+      <y>250</y>
+      <width>211</width>
+      <height>361</height>
      </rect>
     </property>
    </widget>
