--- a/SpriteEditor/Images.qrc
+++ b/SpriteEditor/Images.qrc
@@ -11,5 +11,6 @@
         <file>newFile.png</file>
         <file>redo.png</file>
         <file>undo.png</file>
+        <file>pallete.png</file>
     </qresource>
 </RCC>
